--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--plugin>
+			<!--
+			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
 				<version>1.4.10</version>
@@ -86,7 +87,7 @@
 						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
 					</buildArgs>
 				</configuration>
-			</plugin-->
+   </plugin>-->
 		</plugins>
 	</build>
 </project>
